--- a/src/views/UserForm.mxml
+++ b/src/views/UserForm.mxml
@@ -107,22 +107,22 @@
                     <s:FormLayout/>
                 </s:layout>
                 <s:FormItem fontWeight="normal" label="First name:" backgroundAlpha="0">
-                    <s:TextInput id="userFirstName" text="Alfonso" autoCapitalize="word" autoCorrect="false"
+                    <s:TextInput id="userFirstName" text="" autoCapitalize="word" autoCorrect="false"
                                  enter="{userLastName.setFocus()}"/>
                 </s:FormItem>
 
                 <s:FormItem label="Surname:">
-                    <s:TextInput id="userLastName" autoCapitalize="word" autoCorrect="false" text="Florio"
+                    <s:TextInput id="userLastName" autoCapitalize="word" autoCorrect="false" text=""
                                  enter="{userEmail.setFocus()}"/>
                 </s:FormItem>
 
                 <s:FormItem label="Email:" styleName="emailFormLabel">
-                    <s:TextInput id="userEmail" autoCorrect="false" text="lisophorm@gmail.com"
+                    <s:TextInput id="userEmail" autoCorrect="false" text=""
                                  enter="{userMobile.setFocus()}" softKeyboardType="email"/>
                 </s:FormItem>
 
                 <s:FormItem label="Postcode:">
-                    <s:TextInput id="userMobile" autoCapitalize="all" autoCorrect="false" text="N15 3rg"
+                    <s:TextInput id="userMobile" autoCapitalize="all" autoCorrect="false" text=""
                                  paddingLeft="20" enter="{submit()}" softKeyboardType="default"/>
                 </s:FormItem>
                 <s:Spacer height="30"/>
